fix viewport on mobile devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,11 +6,15 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+html, body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Poppins", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     sans-serif;
   margin: 0;
-  overflow-x: hidden;
 }
 
 /* HOME PAGE */
